Handle location, Pokemon annotations, and directions to pokemons

--- a/PokeFinder/Info.plist
+++ b/PokeFinder/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is required to show nearby Pokemon. If you don&apos;t want to catch them all please keep your dang location to yourself.</string>
 </dict>
 </plist>
